--- a/angular.json
+++ b/angular.json
@@ -30,8 +30,8 @@
               }
             ],
             "styles": [
-              "src/styles/styles.scss",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css"
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "src/styles/styles.scss"
             ],
             "scripts": [
               "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
@@ -98,8 +98,8 @@
               }
             ],
             "styles": [
-              "src/styles/styles.scss",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css"
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "src/styles/styles.scss"
             ]
           }
         }
